update regulation
